glx/testdata/invalid/missing-required-fields/assertions/assertion-missing-sources-and-citations.glx
assertions:
  assertion-missing-sources:
    subject: person-123
    claim: given_name
    value: "John"


